fixed gallery text overflow

--- a/css/768.less
+++ b/css/768.less
@@ -103,7 +103,9 @@
 
         margin-left: -40px;
         width: 100%;
-        height: 430px;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
+        height: fit-content;
         padding: 20px 20px 20px 60px;
 
     }
@@ -216,4 +218,8 @@
     .gallery-btn {
         margin-bottom: 0;
     }
+    .slick-list.draggable {
+        height: 730px !important;
+    }
+
 }
